--- a/demo.html
+++ b/demo.html
@@ -33,7 +33,10 @@
             <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
             <script src="slider.js"></script>
             <script>
-            $('#aslider').aslide();
+                $(document).ready(function() {
+                  $('#aslider').aslide();
+                });
+
             </script>
         </body>
         </html>
