--- a/demo.html
+++ b/demo.html
@@ -31,6 +31,7 @@
         	</div>
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
             <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+            <script src="jquery.transit.js"></script>
             <script src="slider.js"></script>
             <script>
                 $(document).ready(function() {
